--- a/larger_Allen_dataset.ipynb
+++ b/larger_Allen_dataset.ipynb
@@ -1387,25 +1387,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PLh69HLawKpf",
-        "outputId": "48eeb3a5-a60a-4d82-93f2-101a71832f08"
+        "outputId": "8b64ba6f-9a74-42c6-ff90-da3876117f7f"
       },
       "source": [
-        "#neural_data_V1_layer4Vip.ophys_experiment_id.unique()\n",
-        "neural_data_V1_layer4Vip.query('cell_specimen_id == 1086621236').ophys_experiment_id.unique()"
+        "print(neural_data_V1_layer4Vip.mouse_id.unique())\n",
+        "neural_data_V1_layer4Vip.query('cell_specimen_id == 1086516222 ').mouse_id.unique().item()"
       ],
       "execution_count": null,
       "outputs": [
         {
+          "output_type": "stream",
+          "text": [
+            "[435431 449653]\n"
+          ],
+          "name": "stdout"
+        },
+        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([882968566])"
+              "449653"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 41
         }
       ]
     },
@@ -2171,6 +2178,7 @@
         "        full_etr_this_cell['ophys_experiment_id'] = exp_id\n",
         "        full_etr_this_cell['image_name'] = im_name\n",
         "        full_etr_this_cell['valence'] = valence_table.query('image_name==@im_name').valence.values.item()\n",
+        "        full_etr_this_cell['mouse_id'] = neural_data_this_experiment.query('cell_specimen_id == @cell_specimen_id').mouse_id.unique().item()\n",
         "        # append to our list\n",
         "        full_etr.append(full_etr_this_cell)\n",
         "\n",
@@ -2190,13 +2198,236 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0uTtiULjcknH"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 487
+        },
+        "id": "0uTtiULjcknH",
+        "outputId": "b493cd04-acaf-47b3-d195-cff24f05685d"
       },
       "source": [
-        ""
+        "full_etr2 = get_event_triggered_data_full_dataset(neural_data_V1_layer4Vip, Exp_DL_V1_layer4Vip, 'im000', valences)\n",
+        "full_etr2"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 11/11 [00:05<00:00,  1.90it/s]\n",
+            "100%|██████████| 13/13 [00:00<00:00, 28.13it/s]\n",
+            "100%|██████████| 11/11 [00:07<00:00,  1.52it/s]\n",
+            "100%|██████████| 15/15 [00:09<00:00,  1.66it/s]\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>time</th>\n",
+              "      <th>dff</th>\n",
+              "      <th>stimulus_presentations_id</th>\n",
+              "      <th>event_time</th>\n",
+              "      <th>cell_specimen_id</th>\n",
+              "      <th>ophys_experiment_id</th>\n",
+              "      <th>image_name</th>\n",
+              "      <th>valence</th>\n",
+              "      <th>mouse_id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-0.750000</td>\n",
+              "      <td>-0.110699</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1086621236</td>\n",
+              "      <td>882968566</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>435431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.716463</td>\n",
+              "      <td>-0.156733</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1086621236</td>\n",
+              "      <td>882968566</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>435431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0.682927</td>\n",
+              "      <td>-0.216370</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1086621236</td>\n",
+              "      <td>882968566</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>435431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0.649390</td>\n",
+              "      <td>-0.276008</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1086621236</td>\n",
+              "      <td>882968566</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>435431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-0.615854</td>\n",
+              "      <td>-0.177987</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1086621236</td>\n",
+              "      <td>882968566</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>435431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61913</th>\n",
+              "      <td>1.865854</td>\n",
+              "      <td>0.140103</td>\n",
+              "      <td>745</td>\n",
+              "      <td>745.0</td>\n",
+              "      <td>1086509909</td>\n",
+              "      <td>877057341</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>449653</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61914</th>\n",
+              "      <td>1.899390</td>\n",
+              "      <td>0.109753</td>\n",
+              "      <td>745</td>\n",
+              "      <td>745.0</td>\n",
+              "      <td>1086509909</td>\n",
+              "      <td>877057341</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>449653</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61915</th>\n",
+              "      <td>1.932927</td>\n",
+              "      <td>0.079402</td>\n",
+              "      <td>745</td>\n",
+              "      <td>745.0</td>\n",
+              "      <td>1086509909</td>\n",
+              "      <td>877057341</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>449653</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61916</th>\n",
+              "      <td>1.966463</td>\n",
+              "      <td>0.065001</td>\n",
+              "      <td>745</td>\n",
+              "      <td>745.0</td>\n",
+              "      <td>1086509909</td>\n",
+              "      <td>877057341</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>449653</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61917</th>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>0.065001</td>\n",
+              "      <td>745</td>\n",
+              "      <td>745.0</td>\n",
+              "      <td>1086509909</td>\n",
+              "      <td>877057341</td>\n",
+              "      <td>im000</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>449653</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2206970 rows × 9 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           time       dff  stimulus_presentations_id  event_time  \\\n",
+              "0     -0.750000 -0.110699                          0         0.0   \n",
+              "1     -0.716463 -0.156733                          0         0.0   \n",
+              "2     -0.682927 -0.216370                          0         0.0   \n",
+              "3     -0.649390 -0.276008                          0         0.0   \n",
+              "4     -0.615854 -0.177987                          0         0.0   \n",
+              "...         ...       ...                        ...         ...   \n",
+              "61913  1.865854  0.140103                        745       745.0   \n",
+              "61914  1.899390  0.109753                        745       745.0   \n",
+              "61915  1.932927  0.079402                        745       745.0   \n",
+              "61916  1.966463  0.065001                        745       745.0   \n",
+              "61917  2.000000  0.065001                        745       745.0   \n",
+              "\n",
+              "       cell_specimen_id  ophys_experiment_id image_name  valence  mouse_id  \n",
+              "0            1086621236            882968566      im000       -1    435431  \n",
+              "1            1086621236            882968566      im000       -1    435431  \n",
+              "2            1086621236            882968566      im000       -1    435431  \n",
+              "3            1086621236            882968566      im000       -1    435431  \n",
+              "4            1086621236            882968566      im000       -1    435431  \n",
+              "...                 ...                  ...        ...      ...       ...  \n",
+              "61913        1086509909            877057341      im000       -1    449653  \n",
+              "61914        1086509909            877057341      im000       -1    449653  \n",
+              "61915        1086509909            877057341      im000       -1    449653  \n",
+              "61916        1086509909            877057341      im000       -1    449653  \n",
+              "61917        1086509909            877057341      im000       -1    449653  \n",
+              "\n",
+              "[2206970 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "code",
